# Parallelnoe_Programming

./: README.md
Lab_1/: CMakeLists.txt  check.py  lab_1.cpp  Отчёт.docx
Lab_1/перемножение матриц разных размеров/1200x1200/: matrixA.txt  matrixB.txt
Lab_1/перемножение матриц разных размеров/200x200/: matrixA.txt  matrixB.txt  result.txt
Lab_1/перемножение матриц разных размеров/400x400/: matrixA.txt  matrixB.txt  result.txt
Lab_1/перемножение матриц разных размеров/800x800/: matrixA.txt  matrixB.txt  result.txt
